# gpumon

./: LICENSE  README.md  pyproject.toml
src/gpumon/: __init__.py  _defaults.py  _monitor.py  _plot.py  _workers.py
